# wc-2026

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  update.yml
data/: matches.json  pool.json  standings.json  teams.json
data/raw/: 2026-06-12.json  2026-06-14.json  2026-06-15.json  2026-06-16.json  2026-06-17.json  2026-06-19.json  2026-06-20.json  2026-06-21.json  2026-06-22.json  2026-06-23.json  2026-06-25.json  2026-06-27.json  2026-06-28.json  2026-06-29.json  2026-06-30.json  2026-07-01.json  2026-07-02.json  2026-07-03.json  2026-07-04.json  2026-07-05.json  2026-07-06.json  2026-07-07.json  2026-07-09.json  2026-07-10.json  2026-07-11.json  2026-07-12.json  2026-07-14.json  2026-07-15.json  2026-07-17.json  2026-07-18.json  2026-07-19.json  2026-07-20.json  2026-07-21.json  2026-07-22.json  2026-07-24.json
docs/: CONTRACTS.md
reference/: WC_2022.xlsx
src/wcpool/: __init__.py  card.py  fetch.py  picks.py  scoring.py  site.py
tests/: test_card.py  test_fetch.py  test_fixture_sanity.py  test_picks.py  test_scoring.py  test_site.py
tests/fixtures/: card_pool.json  card_standings.json  card_teams.json  fd_api_sample.json  site_matches.json  site_pool.json  site_standings.json  site_teams.json  wc2022.json
