[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wcpool"
version = "0.1.0"
description = "World Cup 2026 friends prediction pool: results pipeline, scoring, dashboard"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
card = ["pillow>=10"]
dev = ["pytest>=8", "ruff>=0.4", "pillow>=10"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
